fix: Return placeholder scheduler when getting list of optimal schedulers